--- a/src/pages/Index.module.scss
+++ b/src/pages/Index.module.scss
@@ -1,3 +1,8 @@
+.title {
+  text-align: center;
+  margin-bottom: 5rem;
+}
+
 // Pokemon
 
 .container {
@@ -59,13 +64,6 @@
   border-color: #ffffff transparent transparent transparent;
 }
 
-// Choices
-
-.choices {
-  display: flex;
-  column-gap: 1rem;
-}
-
 // TypeChips
 
 .types {
@@ -80,6 +78,13 @@
   padding: 0 0.3rem;
   color: #ffffff;
   background-color: #000000;
+}
+
+// Choices
+
+.choices {
+  display: flex;
+  column-gap: 1rem;
 }
 
 // Drop zones
