--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,31 @@
+*:where(:not(iframe, canvas, img, svg, video):not(svg *)) {
+  all: unset;
+  display: revert;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+textarea {
+  white-space: revert;
+}
+
 html,
 body {
   padding: 0;
@@ -9,18 +37,10 @@ body {
   color: #ffffff;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 3rem;
+  margin: 0 3rem;
 }
