--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,7 +30,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 100%;
   background-color: #000000;
@@ -43,4 +43,27 @@ main {
   align-items: center;
   row-gap: 3rem;
   margin: 0 3rem;
+}
+
+em {
+  font-style: italic;
+}
+
+/* inter-regular - latin */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/inter-v7-latin/inter-v7-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+    url('../fonts/inter-v7-latin/inter-v7-latin-regular.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../fonts/inter-v7-latin/inter-v7-latin-regular.woff2')
+      format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/inter-v7-latin/inter-v7-latin-regular.woff')
+      format('woff'),
+    /* Modern Browsers */ url('../fonts/inter-v7-latin/inter-v7-latin-regular.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../fonts/inter-v7-latin/inter-v7-latin-regular.svg#Inter') format('svg'); /* Legacy iOS */
 }
