--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -23,7 +23,7 @@
   cursor: pointer;
 
   &:hover {
-    color: #ffffff;
-    border-color: #ffffff;
+    color: var(--color-fg);
+    border-color: var(--color-fg);
   }
 }
