--- a/src/components/PokemonContainer/PokemonContainer.module.scss
+++ b/src/components/PokemonContainer/PokemonContainer.module.scss
@@ -37,8 +37,8 @@
 }
 
 .dexId {
-  background-color: #ffffff;
-  color: #000000;
+  background-color: var(--color-fg);
+  color: var(--color-bg);
   padding-left: 0.2rem;
   padding-right: 0.1rem;
   font-style: italic;
@@ -54,7 +54,7 @@
   height: 0;
   border-style: solid;
   border-width: 20px 10px 0 0;
-  border-color: #ffffff transparent transparent transparent;
+  border-color: var(--color-fg) transparent transparent transparent;
 }
 
 .types {
@@ -63,10 +63,10 @@
 }
 
 .typeChips {
-  border: 1px solid #ffffff;
+  border: 1px solid var(--color-fg);
   border-radius: 4px;
   text-transform: uppercase;
   padding: 0 0.3rem;
-  color: #ffffff;
-  background-color: #000000;
+  color: var(--color-fg);
+  background-color: var(--color-bg);
 }
