--- a/src/components/primitives/Button/Button.module.scss
+++ b/src/components/primitives/Button/Button.module.scss
@@ -3,7 +3,7 @@
   font-size: 1rem;
   font-weight: 700;
   color: gray;
-  background-color: #000000;
+  background-color: var(--color-bg);
   border: 1px solid gray;
   border-radius: 4px;
   padding: 0.5rem;
@@ -13,6 +13,6 @@
 .active {
   @extend .disable;
   cursor: pointer;
-  color: #000000;
-  background-color: #ffffff;
+  color: var(--color-bg);
+  background-color: var(--color-fg);
 }
