--- a/src/pages/Results.module.scss
+++ b/src/pages/Results.module.scss
@@ -2,11 +2,11 @@
   min-width: 600px;
 
   thead tr {
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 1px solid var(--color-fg);
   }
 
   tbody tr:not(:last-child) {
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 1px solid var(--color-fg);
   }
 
   th,
@@ -30,7 +30,7 @@
 }
 
 .dexId {
-  color: #ffffff;
+  color: var(--color-fg);
   font-style: italic;
   font-weight: 900;
 }
