--- a/src/components/primitives/Button/Button.module.scss
+++ b/src/components/primitives/Button/Button.module.scss
@@ -2,9 +2,9 @@
   font-family: inherit;
   font-size: 1rem;
   font-weight: 700;
-  color: gray;
+  color: var(--color-fg-light);
   background-color: var(--color-bg);
-  border: 1px solid gray;
+  border: 1px solid var(--color-fg-light);
   border-radius: 4px;
   padding: 0.5rem;
   text-transform: uppercase;
@@ -14,5 +14,5 @@
   @extend .disable;
   cursor: pointer;
   color: var(--color-bg);
-  background-color: var(--color-fg);
+  background-color: var(--color-fg-strong);
 }
