--- a/src/pages/Results.module.scss
+++ b/src/pages/Results.module.scss
@@ -2,15 +2,16 @@
   min-width: 600px;
 
   thead tr {
-    border-bottom: 1px solid var(--color-fg);
+    border-bottom: 1px solid var(--color-border-strong);
   }
 
   tbody tr:not(:last-child) {
-    border-bottom: 1px solid var(--color-fg);
+    border-bottom: 1px solid var(--color-border-light);
   }
 
   th,
   td {
+    text-align: center;
     padding: 0.5rem;
   }
 
@@ -19,7 +20,6 @@
   }
 
   td {
-    text-align: center;
     vertical-align: middle;
   }
 }
@@ -30,7 +30,7 @@
 }
 
 .dexId {
-  color: var(--color-fg);
+  color: var(--color-fg-strong);
   font-style: italic;
   font-weight: 900;
 }
