--- a/src/pages/Index.module.scss
+++ b/src/pages/Index.module.scss
@@ -1,10 +1,9 @@
 .home {
+  display: flex;
+  flex-direction: column;
   max-width: 600px;
-  font-size: 1.3rem;
-
-  & > :not(:last-child) {
-    margin-bottom: 3rem;
-  }
+  font-size: 1rem;
+  row-gap: 3rem;
 }
 
 .home > h1 {
