--- a/src/components/PokemonContainer/PokemonContainer.module.scss
+++ b/src/components/PokemonContainer/PokemonContainer.module.scss
@@ -46,7 +46,7 @@
   border: 1px solid var(--color-border-light);
   border-radius: 4px;
   text-transform: uppercase;
-  padding: 0 0.3rem;
+  padding: 0.2rem 0.3rem;
   color: var(--color-fg-light);
   background-color: var(--color-bg);
 }
