--- a/src/pages/Index.module.scss
+++ b/src/pages/Index.module.scss
@@ -2,13 +2,17 @@
   display: flex;
   flex-direction: column;
   max-width: 600px;
-  font-size: 1rem;
   row-gap: 3rem;
 }
 
 .home > h1 {
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 3rem;
+}
+
+.home > h2 {
+  text-align: center;
+  font-size: 2rem;
 }
 
 .explanation {
