--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -57,6 +57,10 @@ em {
   font-style: italic;
 }
 
+strong {
+  font-weight: 800;
+}
+
 a {
   cursor: pointer;
 }
@@ -78,4 +82,22 @@ a {
       format('truetype'),
     /* Safari, Android, iOS */
       url('../fonts/inter-v7-latin/inter-v7-latin-regular.svg#Inter') format('svg'); /* Legacy iOS */
+}
+
+/* inter-800 - latin */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 800;
+  src: url('../fonts/inter-v7-latin/inter-v7-latin-800.eot'); /* IE9 Compat Modes */
+  src: local(''),
+    url('../fonts/inter-v7-latin/inter-v7-latin-800.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../fonts/inter-v7-latin/inter-v7-latin-800.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/inter-v7-latin/inter-v7-latin-800.woff')
+      format('woff'),
+    /* Modern Browsers */ url('../fonts/inter-v7-latin/inter-v7-latin-800.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */ url('../fonts/inter-v7-latin/inter-v7-latin-800.svg#Inter')
+      format('svg'); /* Legacy iOS */
 }
