--- a/src/components/MostVoted/MostVoted.module.scss
+++ b/src/components/MostVoted/MostVoted.module.scss
@@ -1,10 +1,12 @@
-.resultsTable {
-  min-width: 600px;
+.mostVoted {
+  h2 {
+    font-size: 1.3rem;
+    margin-bottom: 0.5rem;
+  }
 }
 
 .tdPokemon {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -24,9 +26,4 @@
   color: var(--color-fg-strong);
   font-style: italic;
   font-weight: 800;
-}
-
-.information {
-  color: var(--color-fg-light);
-  font-style: italic;
 }
