--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,6 +77,10 @@ h1 {
   font-weight: 800;
 }
 
+h2 {
+  font-weight: 800;
+}
+
 /* inter-regular - latin */
 @font-face {
   font-family: 'Inter';
